--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app-container">
+  <app-header></app-header>
   <router-outlet></router-outlet>
   <app-footer></app-footer>
   <app-scroll></app-scroll>
