changed header for log in status

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -39,6 +39,7 @@
       <img [src]="selectedBook.cover_image" alt="Cover" />
       <div class="overlayRight">
         <h3>{{ selectedBook.title }}</h3>
+        <h4>{{ selectedBook.author.author_pseudonym }}</h4>
         <p>{{ selectedBook.description }}</p>
       </div>
     </div>
