--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,17 @@ body {
     font-size: 16px;
     margin:0;
   }
+
+  h3 {
+    font-size: 1.5em;
+    margin-block-end: 0.5em;
+  }
+
+  h4 {
+    font-size: 1.2em;
+    margin-block-end: 0.2em;
+    margin-block-start: 0.2em;
+  }
   
   ::-webkit-scrollbar {
     width: 12px; 
