--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -41,7 +41,7 @@
         }
       
         button {
-          background-color: #e50914;
+          background-color: #0389c2;
           color: white;
           border-radius: 0.25rem;
           cursor: pointer;
@@ -58,7 +58,7 @@
           color: inherit;
   
           &:hover {
-              background-color: #ad0810;
+              background-color: #04496c;
           }
         }
     }
