--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,89 +1,103 @@
 #registerBox {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    min-height: 500px;
-    padding: 16px 48px;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    margin: 16px;
-    border-radius: 20px;
-  
-    h2 {
-      margin-bottom: 28px;
-    }
-  
-    a:hover {
-      text-decoration: underline;
-    }
-  
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 500px;
+  padding: 16px 48px;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  margin: 16px;
+  border-radius: 20px;
 
-  .registerInputBox {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 16px;
-    gap: 16px;
+  a:hover {
+    text-decoration: underline;
   }
+}
+
+.registerInputRow {
+  display: flex;
+  gap: 16px;
+}
+
+.registerInputBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 16px;
+}
 
 form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    input {
-        line-height: 1.5;
-        font-size: 1rem;
-        color: inherit;
-        padding: 1rem;
-        border: solid 1px #B2B8B8;
-        appearance: none;
-        background: transparent;
-        border-radius: 0.25rem;
-         ::placeholder {
-            color: #B2B8B8;
-         }
-      }
-    
-      button {
-        background-color: #e50914;
-        margin-top: 16px;
-        color: white;
-        border-radius: 0.25rem;
-        cursor: pointer;
-        width: 100%;
-        line-height: 1.5;
-        padding: 1rem;
-        min-height: 16px;
-        min-width: 16px;
-        font-size: 1rem;
-        line-height: 1.5;
-        font-size: 1rem;
-        border: none;
-        width: 100%;
-        color: inherit;
-
-        &:hover {
-            background-color: #ad0810;
-        }
-      }
+  input {
+    line-height: 1.5;
+    font-size: 1rem;
+    color: inherit;
+    padding: 1rem;
+    border: solid 1px #b2b8b8;
+    appearance: none;
+    background: transparent;
+    border-radius: 0.25rem;
+    ::placeholder {
+      color: #b2b8b8;
+    }
   }
 
-  .border-red {
-    border: 1px solid red !important;
-  }
-
-  .alert {
-    font-size: 10px;
+  button {
+    background-color: #0389c2;
+    margin-top: 16px;
+    color: white;
+    border-radius: 0.25rem;
+    cursor: pointer;
     width: 100%;
-    text-align: right;
-    color: red;
+    line-height: 1.5;
+    padding: 1rem;
+    min-height: 16px;
+    min-width: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-size: 1rem;
+    border: none;
+    width: 100%;
+
+    &:hover {
+      background-color: #04496c;
+    }
   }
+}
+
+.border-red {
+  border: 1px solid red !important;
+}
+
+.alert {
+  font-size: 10px;
+  width: 100%;
+  text-align: right;
+  color: red;
+}
 
 p {
   text-align: center;
 
   a {
-    font-weight:bold;
+    font-weight: bold;
   }
+}
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  z-index: 100;
 }
