--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,11 @@ body {
     margin:0;
   }
 
+  h2 {
+    margin-block-end: 0.7em;
+    margin-block-start: 0.6em;
+  }
+
   h3 {
     font-size: 1.5em;
     margin-block-end: 0.5em;
@@ -55,7 +60,7 @@ body {
   
     a:hover {
       text-decoration: none !important;
-      text-shadow: 2px 2px 3px red;
+      text-shadow: 2px 2px 3px rgb(81, 196, 205);
     }
   
     button {
@@ -99,7 +104,7 @@ body {
   }
   
   .dNone {
-    display: none;
+    display: none !important;
   }
   
   .center {
