--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -45,7 +45,7 @@ form {
   }
 
   button {
-    background-color: #0389c2;
+    background-color: #056585;
     margin-top: 16px;
     color: white;
     border-radius: 0.25rem;
@@ -72,10 +72,10 @@ form {
 }
 
 .alert {
-  font-size: 10px;
+  font-size: 14px;
   width: 100%;
-  text-align: right;
-  color: red;
+  text-align: left;
+  color: rgb(223, 85, 85);
 }
 
 p {
