--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -41,7 +41,7 @@
         }
       
         button {
-          background-color: #0389c2;
+          background-color: #056585;
           color: white;
           border-radius: 0.25rem;
           cursor: pointer;
