--- a/src/shared/components/header/header.component.html
+++ b/src/shared/components/header/header.component.html
@@ -5,6 +5,7 @@
     <button (click)="showMenu()" type="button">Menu</button>
     <nav id="nav">
         <div class="close" (click)="hideMenu()">X</div>
+        <div *ngIf="login">Hello {{ this.username }}</div>
         <button *ngIf="login" (click)="clickAddBook()" type="button">Add Book</button>
         <button *ngIf="login" (click)="clicklogout()" type="button">Log Out</button>
         <button *ngIf="!login" (click)="clickLogin()" type="button">Log In</button>
