--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,193 +1,321 @@
 body {
-    font-family: "Comic Neue";
-    color: white;
-    overflow-x: hidden;
-    display: flex !important;
-    flex-direction: column;
-    align-items: stretch;
-    background-image: url(/assets/images/background.jpg);
-    background-size: cover;
-    background-position: center;
-    font-size: 16px;
-    margin:0;
+  font-family: "Comic Neue";
+  color: white;
+  overflow-x: hidden;
+  display: flex !important;
+  flex-direction: column;
+  align-items: stretch;
+  background-image: url(/assets/images/background.jpg);
+  background-size: cover;
+  background-position: center;
+  font-size: 16px;
+  margin: 0;
+}
+
+h1 {
+  color: white;
+}
+
+h2 {
+  margin-block-end: 0.7em;
+  margin-block-start: 0.6em;
+}
+
+h3 {
+  font-size: 1.5em;
+  margin-block-end: 0.5em;
+}
+
+h4 {
+  font-size: 1.2em;
+  margin-block-end: 0.2em;
+  margin-block-start: 0.2em;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
   }
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(241, 241, 241, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(14, 16, 19);
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(14, 16, 19, 0.5);
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+header {
+  display: flex;
+  padding: 16px 32px 8px 32px;
+  height: 70px;
+  justify-content: space-between;
+  align-items: center;
+
+  a:hover {
+    text-decoration: none !important;
+    text-shadow: 2px 2px 3px rgb(81, 196, 205);
+  }
+
+  button {
+    margin-top: 0 !important;
+    background-color: rgb(14, 16, 19);
+
+    &:hover {
+      background-color: rgba(14, 16, 19, 0.5);
+  }
+}
+
+button {
+  color: white;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  line-height: 1.5;
+  padding: 1rem;
+  min-height: 16px;
+  min-width: 16px;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-size: 1rem;
+  border: none;
+  color: inherit;
+  }
+}
+
+button[disabled] {
+  opacity: 0.5;
+  cursor: not-allowed;
+  background-color: grey !important;
+}
+
+section {
+  display: flex !important;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 75vh;
+}
+
+.dNone {
+  display: none !important;
+}
+
+.center {
+  text-align: center !important;
+}
+
+
+.legal {
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 32px;
+}
+
+#Box {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  min-height: 500px;
+  padding: 48px;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  margin: 16px;
+  border-radius: 20px;
 
   h2 {
-    margin-block-end: 0.7em;
-    margin-block-start: 0.6em;
+    margin-bottom: 28px;
   }
+}
 
-  h3 {
-    font-size: 1.5em;
-    margin-block-end: 0.5em;
-  }
+.InputRow {
+  display: flex;
+  gap: 16px;
+}
 
-  h4 {
-    font-size: 1.2em;
-    margin-block-end: 0.2em;
-    margin-block-start: 0.2em;
-  }
+.InputBox {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 16px;
+  justify-content: space-between;
+}
+
   
-  ::-webkit-scrollbar {
-    width: 12px; 
-  }
-  
-  ::-webkit-scrollbar-track {
-    background: rgba(241, 241, 241, 0.1);  
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background-color: rgb(14,16,19); 
-    border-radius: 6px; 
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(14,16,19,0.5); 
-  }
-  
-  .app-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-  
-  header {
-    display: flex;
-    padding: 16px 32px 8px 32px;
-    height: 70px;
-    justify-content: space-between;
-    align-items: center;
-  
-    a:hover {
-      text-decoration: none !important;
-      text-shadow: 2px 2px 3px rgb(81, 196, 205);
+form {
+  display: flex;
+  flex-direction: column;
+
+  input {
+      line-height: 1.5;
+      font-size: 1rem;
+      margin-bottom: 16px;
+      color: inherit;
+      padding: 1rem;
+      border: solid 1px #B2B8B8;
+      appearance: none;
+      background: transparent;
+      border-radius: 0.25rem;
+       ::placeholder {
+          color: #B2B8B8;
+       }
+    }
+
+    textarea {
+      line-height: 1.5;
+      font-size: 1rem;
+      margin-bottom: 16px;
+      color: inherit;
+      padding: 1rem;
+      border: solid 1px #B2B8B8;
+      appearance: none;
+      background: transparent;
+      border-radius: 0.25rem;
+       ::placeholder {
+          color: #B2B8B8;
+       }
+    }
+
+    select {
+      line-height: 1.5;
+      font-size: 1rem;
+      margin-bottom: 16px;
+      padding: 1rem;
+      border: solid 1px #B2B8B8;
+      background: transparent;
+      border-radius: 0.25rem;
+      width: 67%;
+      color: white;
     }
   
     button {
-      margin-top: 0 !important;
+      background-color: #056585;
+      color: white;
+      border-radius: 0.25rem;
+      cursor: pointer;
+      line-height: 1.5;
+      padding: 1rem;
+      min-height: 16px;
+      min-width: 16px;
+      font-size: 1rem;
+      line-height: 1.5;
+      font-size: 1rem;
+      border: none;
+  
+      &:hover {
+          background-color: #04496c;
+      }
     }
-  }
-  
-  button {
-    background-color: rgb(14,16,19);
-    margin-top: 16px;
-    color: white;
-    border-radius: 0.25rem;
-    cursor: pointer;
-    line-height: 1.5;
-    padding: 1rem;
-    min-height: 16px;
-    min-width: 16px;
-    font-size: 1rem;
-    line-height: 1.5;
-    font-size: 1rem;
-    border: none;
-    color: inherit;
-  
-    &:hover {
-        background-color: rgba(14,16,19,0.5);
-    }
-  }
-  
-  button[disabled] {
-    opacity: 0.5; 
-    cursor: not-allowed; 
-    background-color: grey !important;
-  }
-  
-  section {
-    display: flex !important;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 75vh;
-  }
-  
-  .dNone {
-    display: none !important;
-  }
-  
-  .center {
-    text-align: center !important;
-  }
+}
+
+.border-red {
+  border: 1px solid red !important;
+}
+
+.alert {
+  font-size: 14px;
+  width: 100%;
+  text-align: left;
+  color: rgb(223, 85, 85);
+}
+
+p {
+  text-align: center;
 
   a {
-    color: white;
-    text-decoration: none;
-    cursor:pointer;
-  
-    &:hover {
-      text-decoration: underline;
-    }
+    font-weight: bold;
   }
-  
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  z-index: 100;
+}
+
+@media (max-width: 400px) {
   h1 {
-      color: white;
-  }
-  
-  .legal {
-    align-items: flex-start;
-    flex-direction: column;
-    padding: 32px;
-  }
-  
-  
-  @media (max-width:400px) {
-   h1 {
     font-size: 1.5em;
-   }
-  
-   button {
+  }
+
+  button {
     padding: 0.5rem;
-   }
   }
+}
 
-
-  /* comic-neue-300 - latin */
+/* comic-neue-300 - latin */
 @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Comic Neue';
-    font-style: normal;
-    font-weight: 300;
-    src: url('./assets/fonts/comic-neue-v8-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* comic-neue-300italic - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Comic Neue';
-    font-style: italic;
-    font-weight: 300;
-    src: url('./assets/fonts/comic-neue-v8-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* comic-neue-regular - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Comic Neue';
-    font-style: normal;
-    font-weight: 400;
-    src: url('./assets/fonts/comic-neue-v8-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* comic-neue-italic - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Comic Neue';
-    font-style: italic;
-    font-weight: 400;
-    src: url('./assets/fonts/comic-neue-v8-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* comic-neue-700 - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Comic Neue';
-    font-style: normal;
-    font-weight: 700;
-    src: url('./assets/fonts/comic-neue-v8-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* comic-neue-700italic - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Comic Neue';
-    font-style: italic;
-    font-weight: 700;
-    src: url('./assets/fonts/comic-neue-v8-latin-700italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Comic Neue";
+  font-style: normal;
+  font-weight: 300;
+  src: url("./assets/fonts/comic-neue-v8-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* comic-neue-300italic - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Comic Neue";
+  font-style: italic;
+  font-weight: 300;
+  src: url("./assets/fonts/comic-neue-v8-latin-300italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* comic-neue-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Comic Neue";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/fonts/comic-neue-v8-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* comic-neue-italic - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Comic Neue";
+  font-style: italic;
+  font-weight: 400;
+  src: url("./assets/fonts/comic-neue-v8-latin-italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* comic-neue-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Comic Neue";
+  font-style: normal;
+  font-weight: 700;
+  src: url("./assets/fonts/comic-neue-v8-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* comic-neue-700italic - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Comic Neue";
+  font-style: italic;
+  font-weight: 700;
+  src: url("./assets/fonts/comic-neue-v8-latin-700italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
