--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -56,50 +56,14 @@ img {
   }
   
   .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    z-index: 100;
   
     img {
       height: 300px;
     }
-  
-  }
-  
-  .overlayBox {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 16px;
-  }
-  
-  #overlayCloseButton {
-      position: absolute;
-      top: 16px;
-      right: 16px;
-  }
-  
-  .overlayRight {
-      display: flex;
-      flex-direction: column;
-  }
-  
-  @media (max-width: 600px) {
-    #searchMobile {
-      display: block;
+
+    p {
+      text-align: left;
     }
   
-    #search {
-      display: none;
-    }
   }
   
