--- a/src/shared/components/header/header.component.scss
+++ b/src/shared/components/header/header.component.scss
@@ -1,5 +1,24 @@
 header {
     background-color: rgb(14,16,19);
+    display: flex;
+    padding: 16px 32px 8px 32px;
+    height: 70px;
+    justify-content: space-between;
+    align-items: center;
+  
+    a:hover {
+      text-decoration: none !important;
+      text-shadow: 2px 2px 3px rgb(81, 196, 205);
+    }
+  
+    button {
+      margin-top: 0 !important;
+      background-color: rgb(14, 16, 19);
+  
+      &:hover {
+        background-color: rgba(14, 16, 19, 0.5);
+    }
+  }
 }
 
 button {
