--- a/src/shared/components/header/header.component.scss
+++ b/src/shared/components/header/header.component.scss
@@ -30,6 +30,12 @@ button {
     }
 }
 
+#navContainer {
+  z-index: 1;
+  cursor:pointer;
+  background-color: rgba(0, 0, 0, 0.1) !important;
+}
+
 nav {
     display: flex;
     flex-direction: column;
@@ -40,14 +46,9 @@ nav {
     right:0;
     background-color: rgb(14,16,19);
     border: 1px white solid;
-    transform: translateX(301px); 
-    transition: all 225ms ease-in-out; 
     min-width: 110px;
+    z-index: 2;
 }
-
-.showNav { 
-    transform: translateX(0); 
-  }
 
 .close {
     text-align: right;
