--- a/src/app/book-edit/book-edit.component.scss
+++ b/src/app/book-edit/book-edit.component.scss
@@ -12,3 +12,8 @@ form select option {
   form select:focus option {
     background-color: #e0f7fa; /* Background color for focused option */
   }
+
+  .checkBoxInfo {
+    width: 60vw;
+    margin-left: 16px;
+  }
