--- a/src/app/book-edit/book-edit.component.html
+++ b/src/app/book-edit/book-edit.component.html
@@ -36,7 +36,7 @@
       </div>
       <div class="overlayBottom">
         <a *ngIf="success" routerLink="/">Go To Index</a>
-        <button *ngIf="!success" (click)="closeOverlay()">Return</button>
+        <button *ngIf="!success" (click)="general.closeOverlay()">Return</button>
       </div>
     </div>
   </section>
