--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -40,6 +40,7 @@
       <div class="overlayRight">
         <h3>{{ selectedBook.title }}</h3>
         <h4>{{ selectedBook.author.author_pseudonym }}</h4>
+        <p>{{ selectedBook.price }} WookieTokens</p>
         <p>{{ selectedBook.description }}</p>
       </div>
     </div>
