--- a/src/app/book-edit/book-edit.component.html
+++ b/src/app/book-edit/book-edit.component.html
@@ -3,26 +3,30 @@
       <form #bookForm="ngForm" (ngSubmit)="onSubmit(bookForm)">
         <div class="InputBox">
           <label for="title">Title:</label>
-          <input type="text" id="title" name="title" class="form-control" [(ngModel)]="book!.title" required>
+          <input type="text" id="title" name="title" class="form-control widthEdit" [(ngModel)]="book!.title" required>
         </div>
         <div class="InputBox">
           <label for="description">Description:</label>
-          <textarea id="description" name="description" class="form-control" [(ngModel)]="book!.description" required></textarea>
+          <textarea id="description" name="description" class="form-control widthEdit" [(ngModel)]="book!.description" required></textarea>
         </div>
         <div class="InputBox">
           <label for="genre">Genre:</label>
-          <select id="genre" name="genre" class="form-control" [(ngModel)]="book!.genre" required>
+          <select id="genre" name="genre" class="form-control widthEditExtra" [(ngModel)]="book!.genre" required>
             <option *ngFor="let genre of genres" [value]="genre">{{ genre }}</option>
           </select>
         </div>
+        <div class="InputBox">
+          <label for="price">Price:</label>
+          <input type="text" id="price" name="price" class="form-control widthEdit" [(ngModel)]="book!.price" l required>
+        </div>
         <div class="form-group InputBox">
           <label for="cover_image">Change Cover:</label>
-          <input type="file" id="cover_image" name="cover_image" class="form-control-file" (change)="onCoverImageSelected($event)" accept="image/*">
+          <input type="file" id="cover_image" name="cover_image" class="form-control-file widthEdit" (change)="onCoverImageSelected($event)" accept="image/*">
         </div>
         <div class="InputBox leftAlign">
           <input type="checkbox" id="is_published" name="is_published" class="form-control" [(ngModel)]="book!.is_published">
           <label class="checkBoxInfo" for="is_published">
-            Published <I>(Beware that if you unpublish your book, you will need to contact the staff at Wookie Books to have it republished. It will not be deleted from the database.)
+            Published <I>(Beware that if you unpublish your book, you can contact the staff at Wookie Books to have it republished. It will not be deleted from the database. To delete your book, go to delete.)
             </I>
           </label>
         </div>
