--- a/src/app/book-edit/book-edit.component.scss
+++ b/src/app/book-edit/book-edit.component.scss
@@ -14,6 +14,14 @@ form select option {
   }
 
   .checkBoxInfo {
-    width: 60vw;
+    width: 40vw;
     margin-left: 16px;
+  }
+
+  .widthEdit {
+    width: 30vw;
+  }
+
+  .widthEditExtra {
+    width: 33vw;
   }
