--- a/src/app/legal/legal.component.html
+++ b/src/app/legal/legal.component.html
@@ -1,1 +1,19 @@
-Foto von Kai Pilger: https://www.pexels.com/de-de/foto/sternhaufen-1341279/
+<section>
+  <div class="flex1">
+    <h2>Legal Notice</h2>
+    <h3>Imprint</h3>
+    <ul>
+      <li>Name: Lohgarra</li>
+      <li>Address: Wookie Ruined Village, forever damn the Trandoshaner!!</li>
+      <li>Planet: Kashyyyk</li>
+    </ul>
+    <div>
+      <h3>Direct all complaints to</h3>
+      <p>Email: Lohgarra[at]thegalaxy.net</p>
+    </div>
+    <br>
+    <h3>Pictures</h3>
+    Background picture Kai Pilger:
+    <a href="">https://www.pexels.com/de-de/foto/sternhaufen-1341279/</a>
+  </div>
+</section>
