--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -105,7 +105,7 @@
     </div>
     <div class="overlayBottom">
       <a *ngIf="success" routerLink="/login">Go To Login</a>
-      <button *ngIf="!success" (click)="closeOverlay()">Try Again</button>
+      <button *ngIf="!success" (click)="general.closeOverlay()">Try Again</button>
     </div>
   </div>
 
