--- a/src/app/book-edit/book-edit.component.html
+++ b/src/app/book-edit/book-edit.component.html
@@ -35,12 +35,12 @@
     </div>
     <div id="overlay" class="overlay dNone">
       <div class="overlayBox">
-        <h3>{{ messageHeader }}</h3>
-        <p>{{ messageText }}</p>
+        <h3>{{ generalService.messageHeader }}</h3>
+        <p>{{ generalService.messageText }}</p>
       </div>
       <div class="overlayBottom">
-        <a *ngIf="success" routerLink="/">Go To Index</a>
-        <button *ngIf="!success" (click)="general.closeOverlay()">Return</button>
+        <a *ngIf="generalService.success" routerLink="/">Go To Index</a>
+        <button *ngIf="!generalService.success" (click)="generalService.closeOverlay()">Return</button>
       </div>
     </div>
   </section>
