--- a/src/app/legal/legal.component.html
+++ b/src/app/legal/legal.component.html
@@ -1,5 +1,15 @@
 <section>
-  <div class="flex1">
+  <div class="flex1 legal">
+    <h2>What is Wookie Books?</h2>
+    <b>
+      Wookie Books is a market place where we can self-publish our achievements and
+      offer them to other Wookies online.<br />
+      The earnings will subsequently be gathered and used to make purchases of
+      medical supplies for a desperate Ewok village.
+    </b>
+    <br><br>
+    <b class="alert">Darth Vader, get out! You have no chance here for your evil doings!!</b>
+    <br />
     <h2>Legal Notice</h2>
     <h3>Imprint</h3>
     <ul>
@@ -9,9 +19,9 @@
     </ul>
     <div>
       <h3>Direct all complaints to</h3>
-      <p>Email: Lohgarra[at]thegalaxy.net</p>
+      <b>Email: Lohgarra[at]thegalaxy.net</b>
     </div>
-    <br>
+    <br />
     <h3>Pictures</h3>
     Background picture Kai Pilger:
     <a href="">https://www.pexels.com/de-de/foto/sternhaufen-1341279/</a>
